# Lab1Repo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  utils.cpp
task1/: CMakeLists.txt  readme.md
task1/include/: library.hpp
task1/src/: library.cpp
task1/tests/: test_basic.cpp
task2/: CMakeLists.txt
task2/src/: library.cpp
task2/tests/: test_basic.cpp
